--- a/public/index.css
+++ b/public/index.css
@@ -119,9 +119,7 @@ code {
   padding: 8px;
 }
 
-#stocks tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
+#stocks tr:nth-child(even){background-color: #f2f2f2;}
 
 #stocks tr:hover {
   background-color: #bcd2ee;
